--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -44,13 +44,12 @@
     "    #Prints out each crime breakdown\n",
     "    for x in crime_labels:\n",
     "        sum = len(dataSet[dataSet.Offense == x])\n",
-    "        print(x + (10 - len(x)) * \" \" + str(sum))\n",
-    "        "
+    "        print(x + (10 - len(x)) * \" \" + str(sum))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "1f30c385-8730-4870-85b3-603780302702",
    "metadata": {},
    "outputs": [],
@@ -59,6 +58,10 @@
     "\n",
     "#Take out unnecessary variables\n",
     "formated_data = raw_data[['X','Y', 'Offense', 'Date_of_Occurrence', 'Forcible', 'Weapon_Description', 'Victim_Gender', 'Reported_As']]\n",
+    "formated_data = formated_data[formated_data.Victim_Gender.notna()]\n",
+    "\n",
+    "formated_data.loc[formated_data.Victim_Gender == formated_data['Victim_Gender'][0], 'Gender'] = 1\n",
+    "formated_data.loc[formated_data.Gender != formated_data.Gender.notna(), 'Gender'] = 0\n",
     "\n",
     "#Rename X and Y\n",
     "formated_data = formated_data.rename(columns = {'X':'Longitude','Y':'Latitude'})"
@@ -74,7 +77,8 @@
     "# split column and add new columns to formated_data\n",
     "\n",
     "formated_data[['Date', 'Time']] = formated_data['Date_of_Occurrence'].str.split(' ', expand=True)\n",
-    "formated_data['Time'] = formated_data['Time'].str[:-3]"
+    "formated_data['Time'] = formated_data['Time'].str[:-9]\n",
+    "formated_data['Time'] = formated_data['Time'].astype(float)"
    ]
   },
   {
@@ -91,17 +95,15 @@
       "ASSAULT   3141\n",
       "VANDALISM 1734\n",
       "B&E       5931\n",
-      "LARCENY   5145\n",
-      "ROBBERY   254\n",
-      "MURDER    12\n",
-      "BURGLARY  360\n"
+      "LARCENY   5145\n"
      ]
     }
    ],
    "source": [
     "#Combines like crimes and removed everything else\n",
     "\n",
-    "crime_labels = ['SEXUAL', 'ASSAULT', 'VANDALISM', 'B&E', 'LARCENY',  'ROBBERY', 'MURDER', 'BURGLARY']\n",
+    "#crime_labels = ['SEXUAL', 'ASSAULT', 'VANDALISM', 'B&E', 'LACENY',  'ROBBERY', 'MURDER', 'BURGLARY']\n",
+    "crime_labels = ['SEXUAL', 'ASSAULT', 'VANDALISM', 'B&E', 'LARCENY']\n",
     "combined_data = combine(formated_data, crime_labels)\n",
     "\n",
     "breakdown(combined_data, crime_labels)"
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f5d827af-c3f8-4d37-a6a8-153638892fa5",
    "metadata": {},
    "outputs": [
@@ -138,6 +140,7 @@
        "      <th>Latitude</th>\n",
        "      <th>Offense</th>\n",
        "      <th>Time</th>\n",
+       "      <th>Gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -146,35 +149,40 @@
        "      <td>-79.452193</td>\n",
        "      <td>35.737344</td>\n",
        "      <td>ASSAULT</td>\n",
-       "      <td>02:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>-79.185550</td>\n",
        "      <td>35.922087</td>\n",
        "      <td>B&amp;E</td>\n",
-       "      <td>14:00:00</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-79.185550</td>\n",
        "      <td>35.922087</td>\n",
        "      <td>B&amp;E</td>\n",
-       "      <td>14:00:00</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>-79.185550</td>\n",
        "      <td>35.922087</td>\n",
        "      <td>B&amp;E</td>\n",
-       "      <td>14:00:00</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-79.185501</td>\n",
        "      <td>35.922094</td>\n",
        "      <td>VANDALISM</td>\n",
-       "      <td>11:12:00</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -182,65 +190,71 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17589</th>\n",
+       "      <th>16963</th>\n",
        "      <td>-78.974294</td>\n",
        "      <td>35.915845</td>\n",
        "      <td>B&amp;E</td>\n",
-       "      <td>11:20:00</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17590</th>\n",
+       "      <th>16964</th>\n",
        "      <td>-78.962904</td>\n",
        "      <td>35.967732</td>\n",
        "      <td>LARCENY</td>\n",
-       "      <td>00:01:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17591</th>\n",
+       "      <th>16965</th>\n",
        "      <td>-78.958768</td>\n",
        "      <td>35.919429</td>\n",
        "      <td>LARCENY</td>\n",
-       "      <td>20:00:00</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17592</th>\n",
+       "      <th>16966</th>\n",
        "      <td>-78.935082</td>\n",
        "      <td>35.979530</td>\n",
        "      <td>B&amp;E</td>\n",
-       "      <td>03:37:00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17593</th>\n",
+       "      <th>16967</th>\n",
        "      <td>-78.923470</td>\n",
        "      <td>36.029718</td>\n",
        "      <td>LARCENY</td>\n",
-       "      <td>18:30:00</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>17594 rows × 4 columns</p>\n",
+       "<p>16968 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Longitude   Latitude    Offense      Time\n",
-       "0     -79.452193  35.737344    ASSAULT  02:30:00\n",
-       "1     -79.185550  35.922087        B&E  14:00:00\n",
-       "2     -79.185550  35.922087        B&E  14:00:00\n",
-       "3     -79.185550  35.922087        B&E  14:00:00\n",
-       "4     -79.185501  35.922094  VANDALISM  11:12:00\n",
-       "...          ...        ...        ...       ...\n",
-       "17589 -78.974294  35.915845        B&E  11:20:00\n",
-       "17590 -78.962904  35.967732    LARCENY  00:01:00\n",
-       "17591 -78.958768  35.919429    LARCENY  20:00:00\n",
-       "17592 -78.935082  35.979530        B&E  03:37:00\n",
-       "17593 -78.923470  36.029718    LARCENY  18:30:00\n",
+       "       Longitude   Latitude    Offense  Time  Gender\n",
+       "0     -79.452193  35.737344    ASSAULT   2.0     1.0\n",
+       "1     -79.185550  35.922087        B&E  14.0     0.0\n",
+       "2     -79.185550  35.922087        B&E  14.0     0.0\n",
+       "3     -79.185550  35.922087        B&E  14.0     1.0\n",
+       "4     -79.185501  35.922094  VANDALISM  11.0     1.0\n",
+       "...          ...        ...        ...   ...     ...\n",
+       "16963 -78.974294  35.915845        B&E  11.0     1.0\n",
+       "16964 -78.962904  35.967732    LARCENY   0.0     0.0\n",
+       "16965 -78.958768  35.919429    LARCENY  20.0     0.0\n",
+       "16966 -78.935082  35.979530        B&E   3.0     1.0\n",
+       "16967 -78.923470  36.029718    LARCENY  18.0     0.0\n",
        "\n",
-       "[17594 rows x 4 columns]"
+       "[16968 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +267,7 @@
     "cleanSet = combined_data.reset_index()\n",
     "\n",
     "#Removes all no longer nessassary infomation\n",
-    "cleanSet = cleanSet[['Longitude','Latitude', 'Offense', 'Time']]\n",
+    "cleanSet = cleanSet[['Longitude','Latitude', 'Offense', 'Time', 'Gender']]\n",
     "\n",
     "cleanSet"
    ]
@@ -261,7 +275,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f00e0d-be20-41ff-b2af-33be34c39785",
+   "id": "719f7f79-76dc-4bdf-a594-68aba5915a14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b863eebd-c157-45f9-90d7-9afe777ba408",
    "metadata": {},
    "outputs": [],
    "source": []
