--- a/local_dataset.ipynb
+++ b/local_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "3698fd43-124b-4dd7-95d8-6606ed7ddd2e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "    local_set = dataSet\n",
     "    \n",
     "    local_set['Distance'] = ((local_set['Longitude'] - x)**2 + (local_set['Latitude'] - y)**2)**(1/2)\n",
-    "    local_set = local_set[local_set.Distance <= 0.01]    \n",
+    "    local_set = local_set[local_set.Distance <= 0.01] #0.01 Original\n",
     "    \n",
     "    return local_set"
    ]
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38262c5-ad57-4537-9b34-9126b56dc45a",
+   "id": "71616b2b-7b9f-46f4-ade7-46fa7037b1c1",
    "metadata": {},
    "outputs": [],
    "source": []
